added get following by filters